--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,227 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
-
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/9.13.0/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/9.13.0/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+      integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ="
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Exceed Shop</title>
   </head>
+
   <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+    <section class="showcase">
+      <div class="video-container">
+        <video autoplay loop muted playsinline>
+          <source src="main.mp4" type="video/mp4" />
+        </video>
+      </div>
+      <header class="header">
+        <nav class="navbar navbar-expand-lg fixed-top py-3">
+          <div class="container">
+            <a
+              style="font-family: 'Allura'; font-size: 3rem"
+              href="/"
+              class="navbar-brand text-capitalize font-weight-bold"
+              >Exceed</a
+            >
+            <button
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+              class="navbar-toggler navbar-toggler-right"
+            >
+              <i class="fa fa-bars"></i>
+            </button>
+
+            <div id="navbarSupportedContent" class="collapse navbar-collapse">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <a
+                    href="#about"
+                    class="nav-link text-uppercase font-weight-bold"
+                    >About</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a
+                    href="https://www.instagram.com/exceedshop/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="nav-link text-uppercase font-weight-bold"
+                    ><i class="bi bi-instagram custom-icon"></i
+                  ></a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    href="https://www.tiktok.com/@exceedshop"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="nav-link text-uppercase font-weight-bold"
+                    ><ion-icon size="large" name="logo-tiktok"></ion-icon
+                  ></a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    href="https://www.youtube.com/channel/UCzwQmJRWCnwMSPhZn0Be3kw"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="nav-link text-uppercase font-weight-bold"
+                    ><ion-icon
+                      style="font-size: 38px"
+                      name="logo-youtube"
+                    ></ion-icon
+                  ></a>
+                </li>
+              </ul>
+            </div>
+            <div id="navbarSupportedContent" class="collapse navbar-collapse">
+              <ul class="navbar-nav ml-auto">
+                <li
+                  style="
+                    border: 1px #e27a94 solid;
+                    margin-left: 40px;
+                    padding: 0px 10px;
+                    cursor: pointer;
+                  "
+                  class="nav-item rounded-pill"
+                >
+                  <a
+                    href="#contact-us"
+                    data-tf-popup="y4Jn4IFc"
+                    data-tf-iframe-props="title=My typeform"
+                    data-tf-medium="snippet"
+                    class="nav-link text-uppercase font-weight-bold"
+                    >Contact Us</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
+
+      <div class="content">
+        <!-- <h1 class="head-title">
+          Exceed App lets you BUY and SELL Hand MADE Gifts, Flowers, Gifts items
+          from registered shops on the go!
+        </h1> -->
+        <h3>Make Someone feel special 😉</h3>
+        <a
+          href="#contact-us"
+          data-tf-popup="y4Jn4IFc"
+          data-tf-iframe-props="title=My typeform"
+          data-tf-medium="snippet"
+          class="btn"
+          >Contact US</a
+        >
+      </div>
+    </section>
+
+    <section id="about">
+      <h1>About Us</h1>
+      <p>
+        At Exceed, we help people with really creative and artistic products
+        reach a wider market. we believe in making these amazing giftable
+        product available for people who need it. we help people who wants to
+        make their loved ones feel appreciated and loved by offering them
+        amazing gifts well suited for the occasion.
+      </p>
+    </section>
+    <section id="bottom">
+      <div class="getintouch">
+        <h2 id="contact-us">Get In Touch</h2>
+        <p>
+          <a
+            rel="noopener noreferrer"
+            id="email-link"
+            href="mailto:info@steptech.global"
+            >kosiso@kosidev.com</a
+          >
+        </p>
+      </div>
+
+      <div class="address">
+        <img src="pin.png" alt="location image" />
+        <div class="address-text">
+          <p>KosidevSoftware</p>
+          <p>Dubai Investment Park 2, Dubai, UAE</p>
+        </div>
+      </div>
+      <h6>
+        <span>Copyright</span> &copy <span id="copyright"></span>
+        <span>KosidevSoftware</span>
+        <a
+          class="footer-link"
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://app.termly.io/document/privacy-policy/d2b6911c-b952-488a-90d9-bf96a9eeebb7"
+          >Privacy Policy</a
+        >
+      </h6>
+    </section>
 
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+      var ONLYONETIME_EXECUTE = null;
+      window.addEventListener(
+        "load",
+        function () {
+          // on page load
 
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
+          document.getElementById("copyright").innerText =
+            new Date().getFullYear();
+
+          document.body.addEventListener(
+            "touchstart",
+            function (e) {
+              if (ONLYONETIME_EXECUTE == null) {
+                video.play();
+
+                //if you want to prepare more than one video/audios use this trick :
+                video2.play();
+                video2.pause();
+                // now video2 is buffering and you can play it programmability later
+                // My personal testing was maximum 6 video/audio for android
+                // and maybe 3 max for iOS using single click or touch.
+                // Every next click also can prepare more audios/videos.
+
+                ONLYONETIME_EXECUTE = 0;
+              }
+            },
+            false
+          );
+        },
+        false
+      );
     </script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+    <script src="//embed.typeform.com/next/embed.js"></script>
   </body>
 </html>
